# Dual_arm_ROS

./: README.md
control_dualarm21_3/: .setup_assistant  CMakeLists.txt  package.xml
control_dualarm21_3/config/: dual_arm21_03.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml
control_dualarm21_3/launch/: ai_connect.launch  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  detect_object.launch  dual_arm21_03_moveit_controller_manager.launch.xml  dual_arm_control.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  motion_planning.launch  move_group.launch  move_group_interface.launch  moveit.rviz  my_control_test.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
control_dualarm21_3/test/: ai_connect.cpp  dual_arm_control.cpp  motion_planning_api.cpp  motion_planning_api_tutorial.cpp  move_group_interface_demo.cpp  my_control_test.cpp
coordinate_estimation/: package.xml
coordinate_estimation/src/: coordinate_estimation.cpp
dual_arm21_03/: CMakeLists.txt  package.xml
dual_arm21_03/config/: joint_names_dual_arm21_03.yaml
dual_arm21_03/launch/: display.launch  gazebo.launch
dual_arm21_03/meshes/: l_LEnd.STL  link_L1.STL  link_L2.STL  link_L3.STL  link_L4.STL  link_L5.STL  link_R1.STL  link_R2.STL  link_R3.STL  link_R4.STL  link_R5.STL  link_REnd.STL
dual_arm21_03/urdf/: dual_arm21_03.csv  dual_arm21_03.urdf
launch_inference/launch/: launch_inference.launch
